@@ -15,6 +15,7 @@ preprocessor_commands = {
     '#else': 'PPELSE',
     '#elif': 'PPELIF',
     '#endif': 'PPENDIF',
+    '#undef': 'PPUNDEF',
     '#include': 'PPINCLUDE'
 }
 
@@ -61,6 +62,7 @@ tokens = [
     'AMPERSAND',
     'COMMA',
     'PRAGMA',
+    'PPERROR',
     'EQUAL',
     'ELLIPSES',
     'LOGICALAND',
@@ -88,7 +90,7 @@ literals = ['!', '/', '\\', '~', '+', '-', '^', '=', '%', '|', '.', '<', '>', '(
 t_ANY_LINE_COMMENT = r'\/\/.*'  # // Comment
 t_ANY_BLOCK_COMMENT = r'/\*([\s\S]*?)\*/'  # /* Comment */
 t_ANY_STRING_LITERAL = r'".*?"'  # Any string literal
-t_ANY_CHARACTER_LITERAL = r'\'.\''  # Any single-character literal
+t_ANY_CHARACTER_LITERAL = r'\'\\?.\''  # Any single-character literal
 t_ANY_DECIMAL_LITERAL = r'[+-]?[0-9][0-9]*[Uu]?[Ll]?[Ll]?'  # A non-prefixed decimal number, with an optional suffix
 t_ANY_HEX_LITERAL = r'[+-]?0[xX][0-9A-Fa-f]*[Uu]?[Ll]?[Ll]?'  # A prefixed hexidecimal number, with an optional suffix
 t_ANY_OCTAL_LITERAL = r'[+-]?0[0-7]*[Uu]?[Ll]?[Ll]?'  # A prefixed octal number, with an optional suffix
@@ -135,6 +137,13 @@ def t_ANY_BOOL_LITERAL(t):
 # This is a special-case because there can be all sorts of random stuff after #pragma and we want to eat it all
 def t_PRAGMA(t):
     r'(?m)^\#pragma.*'
+    return t
+
+
+# Match #error
+# This is a special-case because there can be all sorts of random stuff after #error and we want to eat it all
+def t_PPERROR(t):
+    r'(?m)^\#error.*'
     return t
 
 
