@@ -1,0 +1,37 @@
+// Autogenerated code
+
+#include "imgui.h"
+#include "imgui_internal.h"
+
+// API for exported functions
+#define CIMGUI_API extern "C"
+
+#include <stdio.h>
+#include <stdarg.h>
+
+// Wrap this in a namespace to keep in separate from the C++ API
+namespace cimgui
+{
+#include "cimgui.h"
+#include "cimgui_internal.h"
+}
+
+// Helper functions
+namespace ImGui
+{
+    // Missing LogTextV implementation, only needed for older ImGui versions (<1.82)
+#if IMGUI_VERSION_NUM < 18200
+    void LogTextV(const char* fmt, va_list args)
+    {
+        ImGuiContext& g = *GImGui;
+        if (!g.LogEnabled)
+            return;
+
+        if (g.LogFile)
+            vfprintf(g.LogFile, fmt, args);
+        else
+            g.LogBuffer.appendfv(fmt, args);
+    }
+#endif
+}
+
